<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/txtTitleEditar"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleEditar"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="name"
        android:hint="@string/txtNome"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNome"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="age"
        android:hint="@string/txtIdade"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtIdade"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="phone"
        android:hint="@string/txtTelefone"
        android:inputType="phone"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTelefone"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="postalAddress"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEmail"
        android:layout_centerHorizontal="true"
        android:padding="12dp"
        android:text="@string/txtSalvar"
        android:textSize="16sp" />
</RelativeLayout>