<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_alert">

    <Button
        android:id="@+id/btnClose"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/icX"
        app:icon="@drawable/ic_cross"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/titleDialogDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/txtTitleEditar"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtSearchEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnClose"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:autofillHints="emailAddress"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnEditarReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtSearchEmail"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/txtEditar"
        android:textSize="16sp" />

</RelativeLayout>