<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".DataActivity">

    <TextView
        android:id="@+id/titleConsultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/txtTitleConsultar"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp" />

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/txtLink"
            android:layout_marginStart="72dp"
            android:padding="12dp"
            android:text="@string/txtEditar"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/txtLink"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="72dp"
            android:padding="12dp"
            android:text="@string/txtExcluir"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/txtLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/txtTitleCadastrar"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_back"
            app:drawableTint="@color/arrows" />

        <Button
            android:id="@+id/btnRefresh"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/icRefresh"
            android:layout_marginBottom="12dp"
            app:icon="@drawable/ic_refresh"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>

</LinearLayout>